- Заменил реализации ArrayList и HashMap в виде типов переменных на их абстрактные интерфейсы; - Заменил реализацию методов getAll* на безопасный вариант.